--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
-    <title>React App</title>
-
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Food IN Dankook</title>
     <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKOMAP_API_JS_KEY%&libraries=services,clusterer"></script>
-    <title>Food IN Dankook</title>
-
   </head>
   <body>
     <div id="root"></div>
