[fix] : map api 오류 수정

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Food IN Dankook</title>
     <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKOMAP_API_JS_KEY%&libraries=services,clusterer"></script>
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=246117953b8b5dbea2bbac2817169852&libraries=services,clusterer"></script>
   </head>
   <body>
     <div id="root"></div>
